node/be/overlays/test/postgres-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-playground-postgres-service
spec:
  type: ExternalName
  externalName: devops-playground-postgres-service.default.svc.cluster.local
