node/be/overlays/test/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-playground-be
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: devops-playground-be
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
